fix: card titles and prepare filter buttons

--- a/list.html
+++ b/list.html
@@ -25,7 +25,14 @@
         gap: 10px;
         button {
           cursor: pointer;
-        }
+          background: transparent;
+          border: 2px solid #008945;
+        
+      }
+      button.active {
+        background-color: #008945;
+        color: white;
+      }
       }
       .main-title {
         text-align: center;
@@ -139,7 +146,7 @@
       <section class="animal-list">
         <div class="category-card" data-category="lizards">
           <div class="left">
-            <h2>Супер ящірки</h2>
+            <h2>Комодський варан</h2>
             <p>Такі собі ящірки</p>
 
             <div class="desc">
@@ -153,7 +160,7 @@
         </div>
         <div class="category-card" data-category="lizards">
           <div class="left">
-            <h2>Супер ящірки</h2>
+            <h2>Ігуана звичайна</h2>
             <p>Такі собі ящірки</p>
 
             <div class="desc">
@@ -171,7 +178,7 @@
         </div>
         <div class="category-card" data-category="lizards">
           <div class="left">
-            <h2>Супер ящірки</h2>
+            <h2>Молох</h2>
             <p>Такі собі ящірки</p>
 
             <div class="desc">
@@ -186,7 +193,7 @@
         </div>
         <div class="category-card" data-category="lizards">
           <div class="left">
-            <h2>Супер ящірки</h2>
+            <h2>Плащоносна ящірка</h2>
             <p>Такі собі ящірки</p>
 
             <div class="desc">
@@ -204,7 +211,7 @@
         </div>
         <div class="category-card" data-category="lizards">
           <div class="left">
-            <h2>Супер ящірки</h2>
+            <h2>Хамелеон</h2>
             <p>Такі собі ящірки</p>
 
             <div class="desc">
@@ -219,7 +226,7 @@
         </div>
         <div class="category-card" data-category="lizards">
           <div class="left">
-            <h2>Супер ящірки</h2>
+            <h2>Василіск шоломоносний</h2>
             <p>Такі собі ящірки</p>
 
             <div class="desc">
@@ -237,7 +244,7 @@
         </div>
         <div class="category-card" data-category="lizards">
           <div class="left">
-            <h2>Супер ящірки</h2>
+            <h2>Дракон летючий</h2>
             <p>Такі собі ящірки</p>
 
             <div class="desc">
@@ -253,7 +260,7 @@
         </div>
         <div class="category-card" data-category="crocodiles">
           <div class="left">
-            <h2>Супер крокодили</h2>
+            <h2>Гребенястий крокодил</h2>
             <p>Такі собі крокодили</p>
 
             <div class="desc">
@@ -267,7 +274,7 @@
         </div>
         <div class="category-card" data-category="crocodiles">
           <div class="left">
-            <h2>Супер крокодили</h2>
+            <h2>Алігатор</h2>
             <p>Такі собі крокодили</p>
 
             <div class="desc">
@@ -285,7 +292,7 @@
         </div>
         <div class="category-card" data-category="snakes">
           <div class="left">
-            <h2>Супер змії</h2>
+            <h2>Анаконда</h2>
             <p>Такі собі змії</p>
 
             <div class="desc">
@@ -302,7 +309,7 @@
         </div>
         <div class="category-card" data-category="snakes">
           <div class="left">
-            <h2>Супер змії</h2>
+            <h2>Пітони</h2>
             <p>Такі собі змії</p>
 
             <div class="desc">
@@ -316,7 +323,7 @@
         </div>
         <div class="category-card" data-category="snakes">
           <div class="left">
-            <h2>Супер змії</h2>
+            <h2> Королівська кобра</h2>
             <p>Такі собі змії</p>
 
             <div class="desc">
@@ -331,7 +338,7 @@
         </div>
         <div class="category-card" data-category="snakes">
           <div class="left">
-            <h2>Супер змії</h2>
+            <h2>Кораловий аспід</h2>
             <p>Такі собі змії</p>
 
             <div class="desc">
@@ -346,7 +353,7 @@
         </div>
         <div class="category-card" data-category="snakes">
           <div class="left">
-            <h2>Супер змії</h2>
+            <h2>Ямкоголо́ві</h2>
             <p>Такі собі змії</p>
 
             <div class="desc">
@@ -364,7 +371,7 @@
         </div>
         <div class="category-card" data-category="others">
           <div class="left">
-            <h2>Супер черепахи</h2>
+            <h2>Галапагонська черепахи</h2>
             <p>Такі собі черепахи</p>
 
             <div class="desc">
@@ -382,7 +389,7 @@
         </div>
         <div class="category-card" data-category="others">
           <div class="left">
-            <h2>Супер черепахи</h2>
+            <h2>Зелена черепаха</h2>
             <p>Такі собі черепахи</p>
 
             <div class="desc">
@@ -397,7 +404,7 @@
         </div>
         <div class="category-card" data-category="others">
           <div class="left">
-            <h2>Супер черепахи</h2>
+            <h2> Шкіряста черепаха</h2>
             <p>Такі собі черепахи</p>
 
             <div class="desc">
@@ -415,7 +422,7 @@
         </div>
         <div class="category-card" data-category="others">
           <div class="left">
-            <h2>Супер черепахи</h2>
+            <h2>Грифова черепаха</h2>
             <p>Такі собі черепахи</p>
 
             <div class="desc">
@@ -431,7 +438,7 @@
         </div>
         <div class="category-card" data-category="others">
           <div class="left">
-            <h2>Супер черепахи</h2>
+            <h2> Червоновуха черепаха</h2>
             <p>Такі собі черепахи</p>
 
             <div class="desc">
