feat: init liked modal

--- a/list.html
+++ b/list.html
@@ -179,6 +179,10 @@
         </button>
       </form>
 
+      <div class="additional" style="text-align: center; margin: 20px;">
+        <button data-bs-toggle="modal" data-bs-target="#liked_reptiles">Улюлені</button>
+      </div>
+
       <section class="animal-list">
         <div class="category-card" data-category="lizards">
           <div class="left">
@@ -508,6 +512,16 @@
         </div>
       </section>
     </main>
+
+    <div class="modal fade" id="liked_reptiles" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+          <div class="modal-body text-center">
+              <h2>Улюблені рептилії</h2>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="footer-curve pt-5 mt-5">
       <div class="container pt-5">
