--- a/lizards.html
+++ b/lizards.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -28,6 +28,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./about.html">ПРО НАС</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
+              <li class="nav-item"><a class="nav-link text-white px-4" href="pet_reptiles.html">ДОГЛЯД</a></li>
             </ul>
             <a class="button" href="./settings.html">ПІДТРИМАТИ</a>
           </div>
