--- a/turtles.html
+++ b/turtles.html
@@ -27,7 +27,8 @@
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 text-uppercase fw-bold">
               <li class="nav-item"><a class="nav-link text-white px-4" href="./about.html">ПРО НАС</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
-              <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
+            <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
+              <li class="nav-item"><a class="nav-link text-white px-4" href="pet_reptiles.html">ДОГЛЯД</a></li>
             </ul>
             <a class="button" href="./settings.html">ПІДТРИМАТИ</a>
           </div>
