--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -59,11 +59,106 @@
         </div>
       </section>
     </main>
+
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseOne"
+            aria-expanded="true"
+            aria-controls="collapseOne"
+          >
+            Де живуть крокодили в Африці
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Крокодили в Африці живуть переважно у тропічних районах, населяючи річки, озера, болота та мангрові ліси на
+            південь від Сахари, а також у басейні Нілу та на Мадагаскарі. Основні види — нільський крокодил (поширений
+            майже всюди) та вузькорилий крокодил (в західній та центральній частинах).
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo"
+            aria-expanded="false"
+            aria-controls="collapseTwo"
+          >
+            Чим харчуються морські черепахи
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Морські черепахи харчуються різноманітною їжею, яка залежить від їхнього виду та віку, переважно споживаючи
+            морські трави, водорості, медуз, молюсків та ракоподібних. Дорослі зелені черепахи є переважно травоїдними
+            (водорості), тоді як шкірясті та яструбині черепахи харчуються переважно медузами.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseThree"
+            aria-expanded="false"
+            aria-controls="collapseThree"
+          >
+            Як розмножуються змії
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Змії розмножують ся статевим шляхом з внутрішнім заплідненням, відкладаючи яйця або народжуючи живих малят,
+            залежно від виду та умов середовища. Більшість змій відкладають яйця з м'якою шкаралупою у теплих місцях, не
+            турбуючись про потомство. У холодних регіонах поширене яйцеживородіння, коли малята вилуплюються в тілі
+            матері.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseFour"
+            aria-expanded="true"
+            aria-controls="collapseFour"
+          >
+            Чим особливі австралійські ящірки
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Австралійські ящірки ви різняються унікальною адаптацією до посушливого клімату, незвичним зовнішнім
+            виглядом та захисними механізмами. Яскравими прикладами є «колючий диявол» (молох), який збирає вологу
+            шкірою, та плащеносні ящірки, що використовують «хибні голови» для відлякування ворогів. Вони пристосовані
+            до екстремальних температур, мають унікальні харчові звички, як-от поїдання тисяч мурах, та живуть у норах.
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer class="footer-curve pt-5 mt-5">
       <div class="container pt-5">
         <div class="text-center mt-5 copyright">@ All rights reserved</div>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js" defer></script>
   </body>
 </html>
