fix: accordion last item

--- a/about.html
+++ b/about.html
@@ -129,17 +129,17 @@
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button
-            class="accordion-button"
+            class="accordion-button collapsed"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#collapseFour"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="collapseFour"
           >
             Чим особливі австралійські ящірки
           </button>
         </h2>
-        <div id="collapseFour" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
           <div class="accordion-body">
             Австралійські ящірки ви різняються унікальною адаптацією до посушливого клімату, незвичним зовнішнім
             виглядом та захисними механізмами. Яскравими прикладами є «колючий диявол» (молох), який збирає вологу
