creating new file suporting

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="pet_reptiles.html">ДОГЛЯД</a></li>
             </ul>
 
-            <a class="button" href="./settings.html">ПІДТРИМАТИ</a>
+            <a class="button" href="./donate.html">ПІДТРИМАТИ</a>
           </div>
         </div>
       </nav>
