--- a/about.html
+++ b/about.html
@@ -65,17 +65,17 @@
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button
-            class="accordion-button"
+            class="accordion-button collapsed"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#collapseOne"
-            aria-expanded="true"
+            aria-expanded="false"
             aria-controls="collapseOne"
           >
             Де живуть крокодили в Африці
           </button>
         </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
           <div class="accordion-body">
             Крокодили в Африці живуть переважно у тропічних районах, населяючи річки, озера, болота та мангрові ліси на
             південь від Сахари, а також у басейні Нілу та на Мадагаскарі. Основні види — нільський крокодил (поширений
