feat: load more reptiles

--- a/list.html
+++ b/list.html
@@ -186,6 +186,7 @@
       </div>
 
       <section class="animal-list"></section>
+      <button id="load-more" class="pulse load-more">Завантажити ще</button>
     </main>
 
     <div class="modal fade" id="liked_reptiles" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
