adding new button and 40 more reptiles

--- a/list.html
+++ b/list.html
@@ -125,6 +125,9 @@
           background-image: url('img/like2.svg');
         }
       }
+      .load-more {
+        margin: 0 auto;
+      }
     </style>
   </head>
   <body class="main">
