--- a/index.html
+++ b/index.html
@@ -45,12 +45,8 @@
 
       <section class="intro-section py-5">
         <div class="container text-center py-5">
-          <h2 class="text-uppercase fw-bold text-warning mb-4">вітаємо вас дорогі читачі</h2>
-          <p class="col-md-6 mx-auto">
-            Тут ви зможете знайти різні цікаві факти про рептилій. Світ рептилій з Андрієм Борисюком Зануртеся у
-            захоплюючий світ холоднокровних! Тут ви зможете знайти різні цікаві факти про рептилій, їхній спосіб життя
-            та унікальні особливості. Досліджуйте, дивуйтесь та дізнавайтесь нове!
-          </p>
+          <h2 class="text-uppercase fw-bold text-warning mb-4 typing"></h2>
+          <p class="col-md-6 mx-auto paragraph"></p>
           <a class="button" href="./list.html">Розпочати</a>
         </div>
       </section>
