--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <li class="nav-item"><a class="nav-link text-white px-4" href="./list.html">КАТАЛОГ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="./index.html#news-id">НОВИНИ</a></li>
               <li class="nav-item"><a class="nav-link text-white px-4" href="pet_reptiles.html">ДОГЛЯД</a></li>
+              <button class="change-bg">Замінити тему</button>
             </ul>
 
             <a class="button" href="./donate.html">ПІДТРИМАТИ</a>
